...
        android:text="@string/trending"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_highlight" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_popular_movies"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/standard_x_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
